# comac

./: .clang-format  .gitlab-ci.yml  Makefile.am  NEWS  README  README.md  configure.ac  imagepdf.c  meson.build  meson_options.txt  pdftest.c  version.py
.gitlab-ci/: ignore-image-argb32.txt  ignore-image-rgb24.txt  ignore-image16-rgb24.txt  ignore-pdf-argb32.txt  ignore-pdf-rgb24.txt  ignore-quartz-argb32.txt  ignore-quartz-rgb24.txt  ignore-recording-rgb24.txt  ignore-script-argb32.txt  ignore-svg11-argb32.txt  ignore-svg11-rgb24.txt  ignore-xcb-fallback-rgb24.txt  ignore-xcb-render-0-0-rgb24.txt  ignore-xcb-rgb24.txt  ignore-xcb-window&-rgb24.txt  ignore-xcb-window-rgb24.txt  ignore-xlib-fallback-rgb24.txt  ignore-xlib-render-0-0-rgb24.txt  ignore-xlib-rgb24.txt  ignore-xlib-window-rgb24.txt
boilerplate/: Makefile.am  Makefile.sources  Makefile.win32.features  check-link.c  comac-boilerplate-egl.c  comac-boilerplate-getopt.c  comac-boilerplate-getopt.h  comac-boilerplate-glx.c  comac-boilerplate-pdf.c  comac-boilerplate-private.h  comac-boilerplate-ps.c  comac-boilerplate-quartz.c  comac-boilerplate-scaled-font.h  comac-boilerplate-script.c  comac-boilerplate-svg.c  comac-boilerplate-system.c  comac-boilerplate-system.h  comac-boilerplate-test-surfaces.c  comac-boilerplate-wgl.c  comac-boilerplate-win32-printing.c  comac-boilerplate-win32.c  comac-boilerplate-xcb.c  comac-boilerplate-xlib.c  comac-boilerplate.c  comac-boilerplate.h  make-cairo-boilerplate-constructors.py  make-comac-boilerplate-constructors.py  meson.build
doc/public/: Makefile.am  cairo-docs.xml  cairo-sections.txt  language-bindings.xml  meson.build
meson-cc-tests/: atomic-ops-cxx11.c  atomic-ops-gcc-legacy.c  bfd-section-flags.c  check-unused-result.c  ft_has_color.c  ipc_rmid_deferred_release.c  mkdir-variant-1.c  mkdir-variant-2.c  pthread.c
perf/: cairo-perf-graph-files.c  cairo-perf.c  comac-analyse-trace.c  comac-perf-chart.c  comac-perf-compare-backends.c  comac-perf-diff-files.c  comac-perf-graph-files.c  comac-perf-graph-widget.c  comac-perf-graph.h  comac-perf-micro.c  comac-perf-print.c  comac-perf-report.c  comac-perf-trace.c  comac-perf.c  comac-perf.h  comac-stats.c  comac-stats.h  dirent-win32.h  meson.build
perf/micro/: a1-curve.c  a1-line.c  box-outline.c  comac-perf-cover.c  composite-checker.c  curve.c  disjoint.c  dragon.c  fill-clip.c  fill.c  glyphs.c  hash-table.c  hatching.c  intersections.c  line.c  long-dashed-lines.c  long-lines.c  many-curves.c  many-fills.c  many-strokes.c  mask.c  meson.build  mosaic.c  mosaic.h  paint-with-alpha.c  paint.c  pattern_create_radial.c  pixel.c  pythagoras-tree.c  rectangles.c  rounded-rectangles.c  sierpinski.c  spiral.c  stroke.c  subimage_copy.c  tessellate.c  text.c  tiger.c  twin.c  unaligned-clip.c  (+7 more)
refactors/: delslim.py  filerenamer.py  symbolrenamer.py
src/: Makefile.am  Makefile.am.analysis  Makefile.sources  Makefile.win32.features  cairo-array.c  cairo-compiler-private.h  cairo-debug.c  cairo-device-private.h  cairo-device.c  cairo-font-options.c  cairo-ft-font.c  cairo-gl-glyphs.c  cairo-gl-info.c  cairo-gl-surface.c  cairo-image-surface.c  cairo-matrix.c  cairo-misc.c  cairo-mutex-impl-private.h  cairo-output-stream.c  cairo-pattern.c  cairo-pdf-interchange.c  cairo-pdf-surface-private.h  cairo-pdf-surface.c  cairo-pdf.h  cairo-ps-surface.c  cairo-quartz-font.c  cairo-quartz-private.h  cairo-quartz-surface.c  cairo-recording-surface-private.h  cairo-recording-surface.c  cairo-region.c  cairo-scaled-font-private.h  cairo-scaled-font-subsets.c  cairo-scaled-font.c  cairo-script-private.h  cairo-script-surface.c  cairo-spans.c  cairo-surface-wrapper.c  cairo-surface.c  cairo-svg-surface.c  (+255 more)
src/drm/: cairo-drm-i915-glyphs.c  cairo-drm-i965-glyphs.c  cairo-drm-intel.c
src/win32/: cairo-dwrite-font-public.c  cairo-dwrite-font.cpp  cairo-dwrite-private.hpp  cairo-win32-display-surface.c  cairo-win32-font.c  cairo-win32-printing-surface.c  cairo-win32-private.h  cairo-win32-refptr.hpp  cairo-win32-surface.c  dw-extra.h
subprojects/: .gitignore  expat.wrap
test/: Makefile.am  Makefile.sources  README  a1-bug.c  a1-clip.c  a1-fill.c  a1-image-sample.c  a1-mask-sample.c  a1-mask.c  a1-rasterisation.c  a1-sample.c  a1-traps-sample.c  a8-clear.c  a8-mask.c  aliasing.c  alpha-similar.c  any2ppm.c  api-special-cases.c  arc-direction.c  arc-infinite-loop.c  arc-looping-dash.c  big-empty-box.c  big-empty-triangle.c  big-line.c  big-little-box.c  big-little-triangle.c  big-trap.c  bilevel-image.c  bitmap-font.c  buffer-diff.c  buffer-diff.h  bug-361.c  bug-40410.c  bug-431.c  bug-448.c  bug-51910.c  bug-75705.c  bug-84115.c  bug-bo-collins.c  bug-bo-rectangular.c  (+406 more)
test/pdiff/: args.c  args.h  lpyramid.c  meson.build  pdiff.c  pdiff.h  perceptualdiff.c
util/: malloc-stats.c  meson.build  trace-to-xml.c  xml-to-trace.c
util/cairo-fdr/: fdr.c  meson.build
util/cairo-script/: cairo-script-interpreter.c  cairo-script-private.h  comac-script-file.c  comac-script-hash.c  comac-script-interpreter.c  comac-script-interpreter.h  comac-script-objects.c  comac-script-operators.c  comac-script-private.h  comac-script-scanner.c  comac-script-stack.c  csi-bind.c  csi-exec.c  csi-replay.c  csi-trace.c  meson.build
util/cairo-sphinx/: fdr.c  meson.build  sphinx.c
util/cairo-trace/: meson.build  trace.c
util/comac-missing/: comac-missing.h  getline.c  meson.build  strndup.c
util/comac-script/: cairo-script-interpreter.pc.in  comac-script-file.c  comac-script-hash.c  comac-script-interpreter.c  comac-script-interpreter.h  comac-script-objects.c  comac-script-operators.c  comac-script-private.h  comac-script-scanner.c  comac-script-stack.c  csi-bind.c  csi-exec.c  csi-replay.c  csi-trace.c  meson.build
util/comac-sphinx/: fdr.c  meson.build  sphinx.c
util/comac-trace/: lookup-symbol.c  lookup-symbol.h  meson.build  trace.c
